<resources>
    <string name="app_name">FYP Asthma App</string>
    <string name="sign_in">sign in</string>
    <string name="sign_out">Sign Out</string>
    <string name="display_name">Display Name</string>
    <string name="airway">Airway</string>
    <string name="user">User</string>
    <string name="welcome">Welcome</string>
    <string name="how_are_you_feeling">How are you feeling?</string>
    <string name="feeling_good">Feeling good</string>
    <string name="feeling_fair">Feeling fair</string>
    <string name="not_well">Not well</string>
    <string name="home">Home</string>
    <string name="element_text">element</string>
    <string name="update_triggers">Update Triggers</string>
    <string name="description">description</string>
    <string name="Trigger">Trigger</string>
    <string name="change">change</string>
    <string name="date">Date</string>
    <string name="asthma_manager">Asthma Manager</string>
    <string name="edit_me">edit me</string>
    <string name="enter_a_factor_that_aggravates_your_asthma">Enter a factor that aggravates your asthma</string>
    <string name="agg">Input a factor that aggravates your asthma</string>
    <string name="submit">Submit</string>
    <string name="view_triggers">View Triggers</string>
    <string name="title_activity_maps">Map</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="cancel">Cancel</string>
    <string name="set">SET</string>
    <string name="message">Message</string>
    <string name="maps">Maps</string>
    <string name="address">Enter Address, City or Zip Code</string>
    <string name="magnify">magnify</string>
    <string name="gps">gps</string>
    <string name="map">Map</string>
    <string name="confirm">Confirm</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="select_your_level_of_symptoms">Select your level of Symptoms:</string>
    <string name="minor_symtoms">Minor Symtoms</string>
    <string name="moderate_symptoms">Moderate Symptoms</string>
    <string name="major_symptoms">Major Symptoms</string>
    <string name="symptoms">Symptoms:</string>
    <string name="log_symptoms">Log Symptoms</string>
    <string name="view_symptom_log">View Symptom Log</string>

</resources>